// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse > AttributeList > edge 1`] = `
{
  "children": [
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 16,
            "line": 3,
            "offset": 31,
          },
          "source": undefined,
          "start": {
            "column": 11,
            "line": 3,
            "offset": 26,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "color",
      },
      "location": {
        "end": {
          "column": 21,
          "line": 3,
          "offset": 36,
        },
        "source": undefined,
        "start": {
          "column": 11,
          "line": 3,
          "offset": 26,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 20,
            "line": 3,
            "offset": 35,
          },
          "source": undefined,
          "start": {
            "column": 17,
            "line": 3,
            "offset": 32,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "red",
      },
    },
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 16,
            "line": 4,
            "offset": 52,
          },
          "source": undefined,
          "start": {
            "column": 11,
            "line": 4,
            "offset": 47,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "label",
      },
      "location": {
        "end": {
          "column": 37,
          "line": 4,
          "offset": 73,
        },
        "source": undefined,
        "start": {
          "column": 11,
          "line": 4,
          "offset": 47,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 36,
            "line": 4,
            "offset": 72,
          },
          "source": undefined,
          "start": {
            "column": 19,
            "line": 4,
            "offset": 55,
          },
        },
        "quoted": true,
        "type": "Literal",
        "value": "example example",
      },
    },
  ],
  "kind": "Edge",
  "location": {
    "end": {
      "column": 11,
      "line": 5,
      "offset": 84,
    },
    "source": undefined,
    "start": {
      "column": 9,
      "line": 2,
      "offset": 9,
    },
  },
  "type": "AttributeList",
}
`;

exports[`parse > AttributeList > graph 1`] = `
{
  "children": [
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "source": undefined,
          "start": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "fillcolor",
      },
      "location": {
        "end": {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "source": undefined,
        "start": {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
          "source": undefined,
          "start": {
            "column": 19,
            "line": 1,
            "offset": 18,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "red",
      },
    },
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
          "source": undefined,
          "start": {
            "column": 24,
            "line": 1,
            "offset": 23,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "label",
      },
      "location": {
        "end": {
          "column": 49,
          "line": 1,
          "offset": 48,
        },
        "source": undefined,
        "start": {
          "column": 24,
          "line": 1,
          "offset": 23,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 49,
            "line": 1,
            "offset": 48,
          },
          "source": undefined,
          "start": {
            "column": 32,
            "line": 1,
            "offset": 31,
          },
        },
        "quoted": true,
        "type": "Literal",
        "value": "example example",
      },
    },
  ],
  "kind": "Graph",
  "location": {
    "end": {
      "column": 51,
      "line": 1,
      "offset": 50,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "AttributeList",
}
`;

exports[`parse > AttributeList > node 1`] = `
{
  "children": [
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 16,
            "line": 3,
            "offset": 31,
          },
          "source": undefined,
          "start": {
            "column": 11,
            "line": 3,
            "offset": 26,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "style",
      },
      "location": {
        "end": {
          "column": 24,
          "line": 3,
          "offset": 39,
        },
        "source": undefined,
        "start": {
          "column": 11,
          "line": 3,
          "offset": 26,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 23,
            "line": 3,
            "offset": 38,
          },
          "source": undefined,
          "start": {
            "column": 17,
            "line": 3,
            "offset": 32,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "filled",
      },
    },
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 16,
            "line": 4,
            "offset": 55,
          },
          "source": undefined,
          "start": {
            "column": 11,
            "line": 4,
            "offset": 50,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "color",
      },
      "location": {
        "end": {
          "column": 27,
          "line": 4,
          "offset": 66,
        },
        "source": undefined,
        "start": {
          "column": 11,
          "line": 4,
          "offset": 50,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 26,
            "line": 4,
            "offset": 65,
          },
          "source": undefined,
          "start": {
            "column": 17,
            "line": 4,
            "offset": 56,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "lightgrey",
      },
    },
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 16,
            "line": 5,
            "offset": 82,
          },
          "source": undefined,
          "start": {
            "column": 11,
            "line": 5,
            "offset": 77,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "label",
      },
      "location": {
        "end": {
          "column": 32,
          "line": 5,
          "offset": 98,
        },
        "source": undefined,
        "start": {
          "column": 11,
          "line": 5,
          "offset": 77,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 31,
            "line": 5,
            "offset": 97,
          },
          "source": undefined,
          "start": {
            "column": 19,
            "line": 5,
            "offset": 85,
          },
        },
        "quoted": true,
        "type": "Literal",
        "value": "example #1",
      },
    },
  ],
  "kind": "Node",
  "location": {
    "end": {
      "column": 10,
      "line": 6,
      "offset": 108,
    },
    "source": undefined,
    "start": {
      "column": 9,
      "line": 2,
      "offset": 9,
    },
  },
  "type": "AttributeList",
}
`;

exports[`parse > AttributeList > with comment 1`] = `
{
  "children": [
    {
      "children": [],
      "kind": "Macro",
      "location": {
        "end": {
          "column": 1,
          "line": 4,
          "offset": 39,
        },
        "source": undefined,
        "start": {
          "column": 12,
          "line": 3,
          "offset": 27,
        },
      },
      "type": "Comment",
      "value": "comment 1",
    },
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 16,
            "line": 4,
            "offset": 54,
          },
          "source": undefined,
          "start": {
            "column": 11,
            "line": 4,
            "offset": 49,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "style",
      },
      "location": {
        "end": {
          "column": 24,
          "line": 4,
          "offset": 62,
        },
        "source": undefined,
        "start": {
          "column": 11,
          "line": 4,
          "offset": 49,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 23,
            "line": 4,
            "offset": 61,
          },
          "source": undefined,
          "start": {
            "column": 17,
            "line": 4,
            "offset": 55,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "filled",
      },
    },
  ],
  "kind": "Node",
  "location": {
    "end": {
      "column": 10,
      "line": 5,
      "offset": 72,
    },
    "source": undefined,
    "start": {
      "column": 9,
      "line": 2,
      "offset": 9,
    },
  },
  "type": "AttributeList",
}
`;

exports[`parse > attribute > set HTMLLike value 1`] = `
{
  "children": [],
  "key": {
    "children": [],
    "location": {
      "end": {
        "column": 14,
        "line": 2,
        "offset": 14,
      },
      "source": undefined,
      "start": {
        "column": 9,
        "line": 2,
        "offset": 9,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "label",
  },
  "location": {
    "end": {
      "column": 10,
      "line": 10,
      "offset": 601,
    },
    "source": undefined,
    "start": {
      "column": 9,
      "line": 2,
      "offset": 9,
    },
  },
  "type": "Attribute",
  "value": {
    "children": [],
    "location": {
      "end": {
        "column": 10,
        "line": 10,
        "offset": 601,
      },
      "source": undefined,
      "start": {
        "column": 17,
        "line": 2,
        "offset": 17,
      },
    },
    "quoted": "html",
    "type": "Literal",
    "value": "
          <table border=\\"0\\">
            <tr><td align=\\"text\\">By default, td text is center-aligned</td></tr>
            <tr><td align=\\"text\\">This td is left aligned<br align=\\"left\\" /></td></tr>
            <tr><td align=\\"text\\">this one centered<br align=\\"center\\" /></td></tr>
            <tr><td align=\\"text\\">and this one right aligned<br align=\\"right\\" /><br align=\\"right\\"/></td></tr>
            <tr><td align=\\"text\\">The value of a closing<br align=\\"left\\"/>&lt;br/&gt; tag<br align=\\"center\\"/>refers to the preceeding text<br align=\\"right\\"/></td></tr>
          </table>
        ",
  },
}
`;

exports[`parse > attribute > set quoted value 1`] = `
{
  "children": [],
  "key": {
    "children": [],
    "location": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "source": undefined,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "label",
  },
  "location": {
    "end": {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "Attribute",
  "value": {
    "children": [],
    "location": {
      "end": {
        "column": 21,
        "line": 1,
        "offset": 20,
      },
      "source": undefined,
      "start": {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
    },
    "quoted": true,
    "type": "Literal",
    "value": "example #1",
  },
}
`;

exports[`parse > attribute > set value 1`] = `
{
  "children": [],
  "key": {
    "children": [],
    "location": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "source": undefined,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "style",
  },
  "location": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "Attribute",
  "value": {
    "children": [],
    "location": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "source": undefined,
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "filled",
  },
}
`;

exports[`parse > cluster_statements > comments 1`] = `
[
  {
    "children": [],
    "kind": "Slash",
    "location": {
      "end": {
        "column": 1,
        "line": 3,
        "offset": 21,
      },
      "source": undefined,
      "start": {
        "column": 9,
        "line": 2,
        "offset": 9,
      },
    },
    "type": "Comment",
    "value": "comment1",
  },
  {
    "children": [],
    "kind": "Slash",
    "location": {
      "end": {
        "column": 1,
        "line": 6,
        "offset": 62,
      },
      "source": undefined,
      "start": {
        "column": 9,
        "line": 4,
        "offset": 30,
      },
    },
    "type": "Comment",
    "value": "comment2
comment2",
  },
  {
    "children": [],
    "kind": "Macro",
    "location": {
      "end": {
        "column": 1,
        "line": 8,
        "offset": 82,
      },
      "source": undefined,
      "start": {
        "column": 9,
        "line": 7,
        "offset": 71,
      },
    },
    "type": "Comment",
    "value": "comment3",
  },
  {
    "children": [],
    "kind": "Macro",
    "location": {
      "end": {
        "column": 1,
        "line": 11,
        "offset": 121,
      },
      "source": undefined,
      "start": {
        "column": 9,
        "line": 9,
        "offset": 91,
      },
    },
    "type": "Comment",
    "value": "comment4
comment4",
  },
  {
    "children": [],
    "kind": "Block",
    "location": {
      "end": {
        "column": 24,
        "line": 11,
        "offset": 144,
      },
      "source": undefined,
      "start": {
        "column": 9,
        "line": 11,
        "offset": 129,
      },
    },
    "type": "Comment",
    "value": "comment 5",
  },
]
`;

exports[`parse > dot > with comments 1`] = `
{
  "children": [
    {
      "children": [],
      "kind": "Block",
      "location": {
        "end": {
          "column": 24,
          "line": 2,
          "offset": 24,
        },
        "source": undefined,
        "start": {
          "column": 9,
          "line": 2,
          "offset": 9,
        },
      },
      "type": "Comment",
      "value": "comment1",
    },
    {
      "children": [],
      "directed": true,
      "location": {
        "end": {
          "column": 19,
          "line": 3,
          "offset": 43,
        },
        "source": undefined,
        "start": {
          "column": 9,
          "line": 3,
          "offset": 33,
        },
      },
      "strict": false,
      "type": "Graph",
    },
    {
      "children": [],
      "kind": "Block",
      "location": {
        "end": {
          "column": 24,
          "line": 4,
          "offset": 67,
        },
        "source": undefined,
        "start": {
          "column": 9,
          "line": 4,
          "offset": 52,
        },
      },
      "type": "Comment",
      "value": "comment2",
    },
  ],
  "location": {
    "end": {
      "column": 9,
      "line": 5,
      "offset": 76,
    },
    "source": undefined,
    "start": {
      "column": 9,
      "line": 2,
      "offset": 9,
    },
  },
  "type": "Dot",
}
`;

exports[`parse > edge > digraph edge 1`] = `
{
  "children": [],
  "location": {
    "end": {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "targets": [
    {
      "children": [],
      "id": {
        "children": [],
        "location": {
          "end": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
          "source": undefined,
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "a",
      },
      "location": {
        "end": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
        "source": undefined,
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "NodeRef",
    },
    {
      "children": [],
      "id": {
        "children": [],
        "location": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "source": undefined,
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "b",
      },
      "location": {
        "end": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "source": undefined,
        "start": {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
      },
      "type": "NodeRef",
    },
  ],
  "type": "Edge",
}
`;

exports[`parse > edge > edge with attributes 1`] = `
{
  "children": [
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 18,
            "line": 3,
            "offset": 37,
          },
          "source": undefined,
          "start": {
            "column": 13,
            "line": 3,
            "offset": 32,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "color",
      },
      "location": {
        "end": {
          "column": 29,
          "line": 3,
          "offset": 48,
        },
        "source": undefined,
        "start": {
          "column": 13,
          "line": 3,
          "offset": 32,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 28,
            "line": 3,
            "offset": 47,
          },
          "source": undefined,
          "start": {
            "column": 19,
            "line": 3,
            "offset": 38,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "lightgrey",
      },
    },
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 18,
            "line": 4,
            "offset": 66,
          },
          "source": undefined,
          "start": {
            "column": 13,
            "line": 4,
            "offset": 61,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "label",
      },
      "location": {
        "end": {
          "column": 34,
          "line": 4,
          "offset": 82,
        },
        "source": undefined,
        "start": {
          "column": 13,
          "line": 4,
          "offset": 61,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 33,
            "line": 4,
            "offset": 81,
          },
          "source": undefined,
          "start": {
            "column": 21,
            "line": 4,
            "offset": 69,
          },
        },
        "quoted": true,
        "type": "Literal",
        "value": "example #1",
      },
    },
  ],
  "location": {
    "end": {
      "column": 13,
      "line": 5,
      "offset": 95,
    },
    "source": undefined,
    "start": {
      "column": 11,
      "line": 2,
      "offset": 11,
    },
  },
  "targets": [
    {
      "children": [],
      "id": {
        "children": [],
        "location": {
          "end": {
            "column": 12,
            "line": 2,
            "offset": 12,
          },
          "source": undefined,
          "start": {
            "column": 11,
            "line": 2,
            "offset": 11,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "a",
      },
      "location": {
        "end": {
          "column": 12,
          "line": 2,
          "offset": 12,
        },
        "source": undefined,
        "start": {
          "column": 11,
          "line": 2,
          "offset": 11,
        },
      },
      "type": "NodeRef",
    },
    {
      "children": [],
      "id": {
        "children": [],
        "location": {
          "end": {
            "column": 17,
            "line": 2,
            "offset": 17,
          },
          "source": undefined,
          "start": {
            "column": 16,
            "line": 2,
            "offset": 16,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "b",
      },
      "location": {
        "end": {
          "column": 17,
          "line": 2,
          "offset": 17,
        },
        "source": undefined,
        "start": {
          "column": 16,
          "line": 2,
          "offset": 16,
        },
      },
      "type": "NodeRef",
    },
  ],
  "type": "Edge",
}
`;

exports[`parse > edge > edge with port 1`] = `
{
  "children": [],
  "location": {
    "end": {
      "column": 31,
      "line": 1,
      "offset": 30,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "targets": [
    {
      "children": [],
      "id": {
        "children": [],
        "location": {
          "end": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
          "source": undefined,
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "a",
      },
      "location": {
        "end": {
          "column": 5,
          "line": 1,
          "offset": 4,
        },
        "source": undefined,
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "port": {
        "children": [],
        "location": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "source": undefined,
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "p1",
      },
      "type": "NodeRef",
    },
    {
      "children": [],
      "id": {
        "children": [],
        "location": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "source": undefined,
          "start": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "b",
      },
      "location": {
        "end": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "source": undefined,
        "start": {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
      },
      "port": {
        "children": [],
        "location": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "source": undefined,
          "start": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "p2",
      },
      "type": "NodeRef",
    },
    {
      "children": [],
      "compass": {
        "children": [],
        "location": {
          "end": {
            "column": 23,
            "line": 1,
            "offset": 22,
          },
          "source": undefined,
          "start": {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "w",
      },
      "id": {
        "children": [],
        "location": {
          "end": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "source": undefined,
          "start": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "c",
      },
      "location": {
        "end": {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "source": undefined,
        "start": {
          "column": 17,
          "line": 1,
          "offset": 16,
        },
      },
      "port": {
        "children": [],
        "location": {
          "end": {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
          "source": undefined,
          "start": {
            "column": 19,
            "line": 1,
            "offset": 18,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "p3",
      },
      "type": "NodeRef",
    },
    {
      "children": [],
      "id": {
        "children": [],
        "location": {
          "end": {
            "column": 28,
            "line": 1,
            "offset": 27,
          },
          "source": undefined,
          "start": {
            "column": 27,
            "line": 1,
            "offset": 26,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "d",
      },
      "location": {
        "end": {
          "column": 30,
          "line": 1,
          "offset": 29,
        },
        "source": undefined,
        "start": {
          "column": 27,
          "line": 1,
          "offset": 26,
        },
      },
      "port": {
        "children": [],
        "location": {
          "end": {
            "column": 30,
            "line": 1,
            "offset": 29,
          },
          "source": undefined,
          "start": {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "w",
      },
      "type": "NodeRef",
    },
  ],
  "type": "Edge",
}
`;

exports[`parse > edge > graph edge 1`] = `
{
  "children": [],
  "location": {
    "end": {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "targets": [
    {
      "children": [],
      "id": {
        "children": [],
        "location": {
          "end": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
          "source": undefined,
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "a",
      },
      "location": {
        "end": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
        "source": undefined,
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "NodeRef",
    },
    {
      "children": [],
      "id": {
        "children": [],
        "location": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "source": undefined,
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "b",
      },
      "location": {
        "end": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "source": undefined,
        "start": {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
      },
      "type": "NodeRef",
    },
  ],
  "type": "Edge",
}
`;

exports[`parse > edge > grouped edge targets 1`] = `
{
  "children": [],
  "location": {
    "end": {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "targets": [
    {
      "children": [
        {
          "children": [],
          "id": {
            "children": [],
            "location": {
              "end": {
                "column": 4,
                "line": 1,
                "offset": 3,
              },
              "source": undefined,
              "start": {
                "column": 2,
                "line": 1,
                "offset": 1,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "a1",
          },
          "location": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "source": undefined,
            "start": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "type": "NodeRef",
        },
        {
          "children": [],
          "id": {
            "children": [],
            "location": {
              "end": {
                "column": 8,
                "line": 1,
                "offset": 7,
              },
              "source": undefined,
              "start": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "a2",
          },
          "location": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "source": undefined,
            "start": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "NodeRef",
        },
      ],
      "location": {
        "end": {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
        "source": undefined,
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "NodeRefGroup",
    },
    {
      "children": [
        {
          "children": [],
          "id": {
            "children": [],
            "location": {
              "end": {
                "column": 16,
                "line": 1,
                "offset": 15,
              },
              "source": undefined,
              "start": {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "b1",
          },
          "location": {
            "end": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "source": undefined,
            "start": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
          },
          "type": "NodeRef",
        },
        {
          "children": [],
          "id": {
            "children": [],
            "location": {
              "end": {
                "column": 20,
                "line": 1,
                "offset": 19,
              },
              "source": undefined,
              "start": {
                "column": 18,
                "line": 1,
                "offset": 17,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "b2",
          },
          "location": {
            "end": {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
            "source": undefined,
            "start": {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
          },
          "type": "NodeRef",
        },
      ],
      "location": {
        "end": {
          "column": 21,
          "line": 1,
          "offset": 20,
        },
        "source": undefined,
        "start": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
      },
      "type": "NodeRefGroup",
    },
  ],
  "type": "Edge",
}
`;

exports[`parse > edge > grouped ported edge targets 1`] = `
{
  "children": [],
  "location": {
    "end": {
      "column": 35,
      "line": 1,
      "offset": 34,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "targets": [
    {
      "children": [
        {
          "children": [],
          "id": {
            "children": [],
            "location": {
              "end": {
                "column": 4,
                "line": 1,
                "offset": 3,
              },
              "source": undefined,
              "start": {
                "column": 2,
                "line": 1,
                "offset": 1,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "a1",
          },
          "location": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "source": undefined,
            "start": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "port": {
            "children": [],
            "location": {
              "end": {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
              "source": undefined,
              "start": {
                "column": 5,
                "line": 1,
                "offset": 4,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "p1",
          },
          "type": "NodeRef",
        },
        {
          "children": [],
          "compass": {
            "children": [],
            "location": {
              "end": {
                "column": 16,
                "line": 1,
                "offset": 15,
              },
              "source": undefined,
              "start": {
                "column": 15,
                "line": 1,
                "offset": 14,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "w",
          },
          "id": {
            "children": [],
            "location": {
              "end": {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
              "source": undefined,
              "start": {
                "column": 9,
                "line": 1,
                "offset": 8,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "a2",
          },
          "location": {
            "end": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "source": undefined,
            "start": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
          },
          "port": {
            "children": [],
            "location": {
              "end": {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
              "source": undefined,
              "start": {
                "column": 12,
                "line": 1,
                "offset": 11,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "p2",
          },
          "type": "NodeRef",
        },
      ],
      "location": {
        "end": {
          "column": 17,
          "line": 1,
          "offset": 16,
        },
        "source": undefined,
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "NodeRefGroup",
    },
    {
      "children": [
        {
          "children": [],
          "id": {
            "children": [],
            "location": {
              "end": {
                "column": 24,
                "line": 1,
                "offset": 23,
              },
              "source": undefined,
              "start": {
                "column": 22,
                "line": 1,
                "offset": 21,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "b1",
          },
          "location": {
            "end": {
              "column": 26,
              "line": 1,
              "offset": 25,
            },
            "source": undefined,
            "start": {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
          },
          "port": {
            "children": [],
            "location": {
              "end": {
                "column": 26,
                "line": 1,
                "offset": 25,
              },
              "source": undefined,
              "start": {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "e",
          },
          "type": "NodeRef",
        },
        {
          "children": [],
          "id": {
            "children": [],
            "location": {
              "end": {
                "column": 30,
                "line": 1,
                "offset": 29,
              },
              "source": undefined,
              "start": {
                "column": 28,
                "line": 1,
                "offset": 27,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "b2",
          },
          "location": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "source": undefined,
            "start": {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
          },
          "port": {
            "children": [],
            "location": {
              "end": {
                "column": 33,
                "line": 1,
                "offset": 32,
              },
              "source": undefined,
              "start": {
                "column": 31,
                "line": 1,
                "offset": 30,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "p3",
          },
          "type": "NodeRef",
        },
      ],
      "location": {
        "end": {
          "column": 34,
          "line": 1,
          "offset": 33,
        },
        "source": undefined,
        "start": {
          "column": 21,
          "line": 1,
          "offset": 20,
        },
      },
      "type": "NodeRefGroup",
    },
  ],
  "type": "Edge",
}
`;

exports[`parse > graph > anonymous digraph 1`] = `
{
  "children": [],
  "directed": true,
  "location": {
    "end": {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "strict": false,
  "type": "Graph",
}
`;

exports[`parse > graph > digraph named test 1`] = `
{
  "children": [],
  "directed": true,
  "id": {
    "children": [],
    "location": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "source": undefined,
      "start": {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "test",
  },
  "location": {
    "end": {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "strict": false,
  "type": "Graph",
}
`;

exports[`parse > graph > digraph named test(quoted) 1`] = `
{
  "children": [],
  "directed": true,
  "id": {
    "children": [],
    "location": {
      "end": {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "source": undefined,
      "start": {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
    },
    "quoted": true,
    "type": "Literal",
    "value": "test",
  },
  "location": {
    "end": {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "strict": false,
  "type": "Graph",
}
`;

exports[`parse > graph > graph named test 1`] = `
{
  "children": [],
  "directed": false,
  "id": {
    "children": [],
    "location": {
      "end": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "source": undefined,
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "test",
  },
  "location": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "strict": false,
  "type": "Graph",
}
`;

exports[`parse > graph > strict digraph named test 1`] = `
{
  "children": [],
  "directed": true,
  "id": {
    "children": [],
    "location": {
      "end": {
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "source": undefined,
      "start": {
        "column": 16,
        "line": 1,
        "offset": 15,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "test",
  },
  "location": {
    "end": {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "strict": true,
  "type": "Graph",
}
`;

exports[`parse > graph > strict graph named test 1`] = `
{
  "children": [],
  "directed": false,
  "id": {
    "children": [],
    "location": {
      "end": {
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "source": undefined,
      "start": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "test",
  },
  "location": {
    "end": {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "strict": true,
  "type": "Graph",
}
`;

exports[`parse > node > node with attributes 1`] = `
{
  "children": [
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 18,
            "line": 3,
            "offset": 35,
          },
          "source": undefined,
          "start": {
            "column": 13,
            "line": 3,
            "offset": 30,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "style",
      },
      "location": {
        "end": {
          "column": 26,
          "line": 3,
          "offset": 43,
        },
        "source": undefined,
        "start": {
          "column": 13,
          "line": 3,
          "offset": 30,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 25,
            "line": 3,
            "offset": 42,
          },
          "source": undefined,
          "start": {
            "column": 19,
            "line": 3,
            "offset": 36,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "filled",
      },
    },
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 18,
            "line": 4,
            "offset": 61,
          },
          "source": undefined,
          "start": {
            "column": 13,
            "line": 4,
            "offset": 56,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "color",
      },
      "location": {
        "end": {
          "column": 29,
          "line": 4,
          "offset": 72,
        },
        "source": undefined,
        "start": {
          "column": 13,
          "line": 4,
          "offset": 56,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 28,
            "line": 4,
            "offset": 71,
          },
          "source": undefined,
          "start": {
            "column": 19,
            "line": 4,
            "offset": 62,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "lightgrey",
      },
    },
    {
      "children": [],
      "key": {
        "children": [],
        "location": {
          "end": {
            "column": 18,
            "line": 5,
            "offset": 90,
          },
          "source": undefined,
          "start": {
            "column": 13,
            "line": 5,
            "offset": 85,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "label",
      },
      "location": {
        "end": {
          "column": 34,
          "line": 5,
          "offset": 106,
        },
        "source": undefined,
        "start": {
          "column": 13,
          "line": 5,
          "offset": 85,
        },
      },
      "type": "Attribute",
      "value": {
        "children": [],
        "location": {
          "end": {
            "column": 33,
            "line": 5,
            "offset": 105,
          },
          "source": undefined,
          "start": {
            "column": 21,
            "line": 5,
            "offset": 93,
          },
        },
        "quoted": true,
        "type": "Literal",
        "value": "example #1",
      },
    },
  ],
  "id": {
    "children": [],
    "location": {
      "end": {
        "column": 15,
        "line": 2,
        "offset": 15,
      },
      "source": undefined,
      "start": {
        "column": 11,
        "line": 2,
        "offset": 11,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "test",
  },
  "location": {
    "end": {
      "column": 13,
      "line": 6,
      "offset": 119,
    },
    "source": undefined,
    "start": {
      "column": 11,
      "line": 2,
      "offset": 11,
    },
  },
  "type": "Node",
}
`;

exports[`parse > node > simple node 1`] = `
{
  "children": [],
  "id": {
    "children": [],
    "location": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "source": undefined,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "test",
  },
  "location": {
    "end": {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "Node",
}
`;

exports[`parse > subgraph > anonymous subgraph 1`] = `
{
  "children": [],
  "location": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "Subgraph",
}
`;

exports[`parse > subgraph > named subgraph 1`] = `
{
  "children": [],
  "id": {
    "children": [],
    "location": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "source": undefined,
      "start": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "hoge",
  },
  "location": {
    "end": {
      "column": 17,
      "line": 1,
      "offset": 16,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "Subgraph",
}
`;

exports[`parse > subgraph > no keyword anonymous 1`] = `
{
  "children": [],
  "location": {
    "end": {
      "column": 3,
      "line": 1,
      "offset": 2,
    },
    "source": undefined,
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "Subgraph",
}
`;
